Fix grading deletion on assignment deletion